--- a/Tamales Costeña/Video2.html
+++ b/Tamales Costeña/Video2.html
@@ -276,13 +276,13 @@
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px;margin-top:0px;">
                     <span>  
                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.lacostena.com.mx/es/recetas/cazuela-de-tamales-al-hor/"  target="block">    
-                        <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/Q5LX6xl.png" title="compartir en facebook" width="22" /></a>
+                        <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/6XHRAxT.png" title="compartir en facebook" width="22" /></a>
 
                             <a class="shared" href="https://plus.google.com/share?url=https://www.lacostena.com.mx/es/recetas/cazuela-de-tamales-al-hor/" target="block">
-                            <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/h9SM1HK.png" title="compartir en google+" width="22" /></a>
+                            <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/X8j8gMO.png" title="compartir en google+" width="22" /></a>
 
                             <a class="shared" href="https://twitter.com/home?status=https://www.lacostena.com.mx/es/recetas/cazuela-de-tamales-al-hor/" target="block">
-                            <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/5q57kv8.png" title="compartir en twitter" width="22" /></a>
+                            <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/ODDYMlN.png" title="compartir en twitter" width="22" /></a>
                     </span>
                 </div>
                
