--- a/Formatos ADS/hover text/MAP FINAL/hover-text-big.html
+++ b/Formatos ADS/hover text/MAP FINAL/hover-text-big.html
@@ -64,7 +64,6 @@
     top: 0;
     left: 100%;
     padding: 60px 30px;
-    cursor: pointer;
 }
 /*.card:hover .details {
     top: 0;
@@ -85,7 +84,12 @@
     text-decoration: none;
 }
 
-
+.facebooki{
+    margin-left: 40px;
+}
+.facebooki, .twitteri, .googlei{
+    padding:15px;
+}
 </style>
 
 <body>
