--- a/Tiguan dic/Cube02.html
+++ b/Tiguan dic/Cube02.html
@@ -803,7 +803,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/SJiK7WX.png"/>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/T8AUKK9.jpg"/>
+<img id="i130" src="https://i.imgur.com/KMInPHT.jpg"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
