--- a/Tiguan dic/Cube03.html
+++ b/Tiguan dic/Cube03.html
@@ -801,7 +801,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">Porque te quiere, consiéntelo.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/Fyizari.jpg"/>
+<img id="i130" src="https://i.imgur.com/dRBPApb.jpg"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/SJiK7WX.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
