--- a/Argeta diciembre/Cube2.html
+++ b/Argeta diciembre/Cube2.html
@@ -815,7 +815,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i24.text.html:text/html-->
 <div id="i24">Two new flavors now in the US!</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/EXQdKXd.png"/>
+<img id="i58" src="https://i.imgur.com/rV7gjUg.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i184.image.html:image/html-->
