--- a/Argeta diciembre/Venetian2.html
+++ b/Argeta diciembre/Venetian2.html
@@ -2208,9 +2208,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(39px, 486px) rotate(0deg);
 }
 /*#/#*//*#i12.text.css:text/base/css*/
-#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: justify; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: justify; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
-#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 267px; height: 39px;
+#i12 { position: absolute; top: -2%; left: 0%; overflow: hidden; width: 267px; height: 39px;
         -ms-transform: translate(0, 0) translate(18px, 536px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(18px, 536px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(18px, 536px) rotate(0deg);
@@ -2264,7 +2264,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/o7Ehqwh.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/cmwM2pZ.png"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/fFepiLa.png"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i26.button.html:button/html-->
