--- a/Uni Panamericana/Fade.html
+++ b/Uni Panamericana/Fade.html
@@ -85,7 +85,7 @@
         
           .cta {
             position: absolute;
-            bottom: 65px;
+            bottom: 75px;
             width: 120px;
             line-height: 1.3em;
             z-index: 5;
@@ -110,15 +110,15 @@
         }
 
         .ClaroColombiaFade .bg.cover-1 {
-            background-image: url(https://i.imgur.com/1G1sqYk.png)
+            background-image: url(https://i.imgur.com/u7ayUvv.png)
         }
 
         .ClaroColombiaFade .bg.cover-2 {
-            background-image: url(https://i.imgur.com/YZRJ18O.png)
+            background-image: url(https://i.imgur.com/gqSxDTa.png)
         }
 
         .ClaroColombiaFade .bg.cover-3 {
-            background-image: url(https://i.imgur.com/qhZFfND.png)
+            background-image: url(https://i.imgur.com/mw9QtAX.png)
         }
 
         .ClaroColombiaFade .bzm_cover.bzm_pos_tl {
@@ -150,7 +150,7 @@
             padding: 6px 0 0 .3em;
             line-height: 1.1;
             color: #000;
-            margin-top: 19px
+            margin-top: 14px
                 
         }
 
