--- a/Uni Panamericana/Fade.html
+++ b/Uni Panamericana/Fade.html
@@ -10,7 +10,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'https://www.midas.es/';
+                adfClickTAGUrl = 'https://www.up.edu.mx/en/international/mex';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
