url y padding top

--- a/Uni Panamericana/Fade2.html
+++ b/Uni Panamericana/Fade2.html
@@ -10,7 +10,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'https://www.midas.es/';
+                adfClickTAGUrl = 'https://www.up.edu.mx/en/international/mex';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
@@ -85,7 +85,7 @@
         
           .cta {
             position: absolute;
-            bottom: 65px;
+            bottom: 75px;
             width: 120px;
             line-height: 1.3em;
             z-index: 5;
@@ -150,7 +150,7 @@
             padding: 6px 0 0 .3em;
             line-height: 1.1;
             color: #000;
-            margin-top: 19px
+            margin-top: 12px
                 
         }
 
