--- a/Uni Panamericana/slider.html
+++ b/Uni Panamericana/slider.html
@@ -20,7 +20,7 @@
             height: 478px;
             margin: 0 auto;
             background-color: #FFF;
-            border: 1px solid #c5c5c5;
+            border: 1px solid s;
         }
 
         .mustela .te-wrapper {
