venetian y cubo corregido

--- a/Quakerstate/Venetian.html
+++ b/Quakerstate/Venetian.html
@@ -2262,9 +2262,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/mHA8cMO.png"/>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">¡¡ No te desgastes!!, Quaker State es tu copiloto.</div>
+<div id="i7">¡¡No te desgastes!!, Quaker State es tu copiloto.</div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">4 Lo tienes muy cerca, en la gasolinera entre Fco. Morazán y, Calle Gral. Anaya No. 175</div>
+<div id="i12">Lo tienes muy cerca, en la gasolinera entre Fco. Morazán y, Calle Gral. Anaya No. 175.</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2381,11 +2381,11 @@ customName: false;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
-name: ¡¡ No te desgastes!!, Quaker State es tu copiloto.; customName: false;
+name: ¡¡No te desgastes!!, Quaker State es tu copiloto.; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i12.text.meta:text/meta*/
-name: 4 Lo tienes muy cerca, en la gasolinera entre Fco. Morazán y, Calle Gral. Anaya No. 175; customName: false;
+name: Lo tienes muy cerca, en la gasolinera entre Fco. Morazán y, Calle Gral. Anaya No. 175.; customName: false;
 /*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
