--- a/Quakerstate/index.html
+++ b/Quakerstate/index.html
@@ -517,7 +517,7 @@ Quaker State es tu copiloto.</div>
 <!--#/#--><!--#i41.i98.image.html:image/html-->
 <img id="i98" src="https://i.imgur.com/tpnGV7c.png"/>
 <!--#/#--><!--#i41.i100.text.html:text/html-->
-<div id="i100">4 Lo tienes muy cerca, en la gasolinera entre Fco. Morazán y, Calle Gral. Anaya No. 175.</div>
+<div id="i100">Lo tienes muy cerca, en la gasolinera entre Fco. Morazán y, Calle Gral. Anaya No. 175.</div>
 <!--#/#--><!--#i41.i102.image.html:image/html-->
 <img id="i102" src="https://i.imgur.com/mHA8cMO.png"/>
 <!--#/#--><!--#i41.i104.shape.html:shape/html-->
