--- a/IFT DIC/index.html
+++ b/IFT DIC/index.html
@@ -436,7 +436,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i8.i62.image.html:image/html-->
 <img id="i62" src="https://i.imgur.com/cDe8yVL.jpg"/>
 <!--#/#--><!--#i8.i64.text.html:text/html-->
-<div id="i64">¿Por qué necesito saber el número EMEI de mi celular?</div>
+<div id="i64">¿Por qué necesito saber el número IMEI de mi celular?</div>
 <!--#/#--><!--#i8.i66.shape.html:shape/html-->
 <div id="i66"></div>
 <!--#/#-->
@@ -450,7 +450,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i19.i72.image.html:image/html-->
 <img id="i72" src="https://i.imgur.com/b2CkfQu.png"/>
 <!--#/#--><!--#i19.i74.text.html:text/html-->
-<div id="i74">En caso de robo saber el EMEI de tu celular te ahorrará problemas.</div>
+<div id="i74">En caso de robo saber el IMEI de tu celular te ahorrará problemas.</div>
 <!--#/#--><!--#i19.i76.shape.html:shape/html-->
 <div id="i76"></div>
 <!--#/#-->
@@ -476,7 +476,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i41.i90.image.html:image/html-->
 <img id="i90" src="https://i.imgur.com/8nR8ki5.jpg"/>
 <!--#/#--><!--#i41.i92.text.html:text/html-->
-<div id="i92">Consulta y conserva tu código EMEI.</div>
+<div id="i92">Consulta y conserva tu código IMEI.</div>
 <!--#/#--><!--#i41.i94.image.html:image/html-->
 <img id="i94" src="https://i.imgur.com/b2CkfQu.png"/>
 <!--#/#--><!--#i41.i96.shape.html:shape/html-->
