--- a/Hotel xcaret/ZoomPrueba/example.html
+++ b/Hotel xcaret/ZoomPrueba/example.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i' rel='stylesheet' type='text/css'>
+
 
 <style>
 body { 
@@ -22,13 +22,15 @@ body {
 .container .ism-slider { margin-left: auto; margin-right: auto; }
 </style>
 
+
+
 <link rel="stylesheet" href="ism/css/my-slider.css"/>
 <script src="ism/js/ism-2.2.min.js"></script>
 
 </head>
 <body>
 <div class='container'>
-<div class="cta"><span class="ism_text_title ism_text_bold" style="font-size:80%; color: white;">¡Adelante!</span></div>
+<div class="cta"><span class="ism_text_title ism_text_bold" style="font-size:80%; font-family:Arial; border: 1px; color: white;">¡Adelante!</span></div>
 
 <div class="ism-slider" data-transition_type="zoom" data-play_type="once" data-interval="3000" data-image_fx="zoompan" data-radios="false" id="my-slider">
   <ol>
@@ -45,7 +47,9 @@ body {
 </div>
 
 <div style="margin-top:20px; margin-left:0px; margin-right: 10px;">
-                    <div class="ism_text"> <span class="ism_text_title ism_text_bold" style="color:#000000; font-size:18px; text-align:center;margin-top: 81px;">¿Quieres tener lo mejor de México? </span> <img class="logo" style="margin-top: 10px;width: 90px;margin-left:200px;" src="https://i.imgur.com/DW0AiRN.png" alt=""> </div>
+                    <div class="ism_text"> <span class="ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:18px; text-align:center;margin-top: 81px;">¿Quieres tener lo mejor de México? </span> 
+                    
+                    <img class="logo" style="margin-top: 10px;width: 90px;margin-left:200px;" src="https://i.imgur.com/DW0AiRN.png" alt=""> </div>
                 </div>
 
 </div>
