--- a/Vanish/Venetian.html
+++ b/Vanish/Venetian.html
@@ -2220,16 +2220,16 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i48.image.css:image/base/css*/
 #i48 { opacity: 1; }
 /*#/#*//*#i48.i49.positioning.css:positioning/base/css.2*/
-#i48 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 50px; height: 55px;
-        -ms-transform: translate(0, 0) translate(244px, 190px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(244px, 190px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(244px, 190px) rotate(0deg);
-        transform: translate(0, 0) translate(244px, 190px) rotate(0deg);
+#i48 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 40px; height: 45px;
+        -ms-transform: translate(0, 0) translate(254px, 200px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(254px, 200px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(254px, 200px) rotate(0deg);
+        transform: translate(0, 0) translate(254px, 200px) rotate(0deg);
 }
 /*#/#*//*#i46.text.css:text/base/css*/
-#i46 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 19px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i46 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 19px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
-#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 233px; height: 42px;
+#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 277px; height: 42px;
         -ms-transform: translate(0, 0) translate(11px, 179px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(11px, 179px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(11px, 179px) rotate(0deg);
