--- a/Vanish/fade.html
+++ b/Vanish/fade.html
@@ -67,11 +67,11 @@
         }
 
         .corona .bg.cover-1 {
-            background-image: url(https://i.imgur.com/XTMT4Ow.jpg)
+            background-image: url(https://i.imgur.com/JRvJTgh.png)
         }
 
         .corona .bg.cover-2 {
-            background-image: url(https://i.imgur.com/cX6AZIq.jpg)
+            background-image: url(https://i.imgur.com/NQz6nBc.png)
         }
 
         .corona .bg.cover-3 {
