--- a/Vanish/Venetian.html
+++ b/Vanish/Venetian.html
@@ -2273,7 +2273,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i2.i4.slice-image.html:slice-image/html-->
 <dataimg id="i4" src="https://i.imgur.com/G3XgNY0.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/YiIithA.png"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/38xn3d8.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
 <dataimg id="i6" src="https://i.imgur.com/4OcT44f.png"></dataimg>
 <!--#/#-->
