--- a/Vanish/fade.html
+++ b/Vanish/fade.html
@@ -109,7 +109,7 @@
             color: #000;
             text-align: center;
             margin-top: 18px;
-            width: 99%;
+            width: 94%;
             
         }
 
@@ -274,7 +274,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:20px;text-align:center;"> Donde hay una mancha hay una solución.</span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:20px;text-align:center;"> ¿Sabrías cómo quitar una mancha de salsa?</span></div>
             <div style="bottom:0px;height:40px;text-align:right ;margin-top:-2px; margin-right: 5px;"> <img src="https://i.imgur.com/vRjfw9Z.png" style="height:45px;margin-top:-10px;">
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-34px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.vanish.com.mx/" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/CABj32j.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://www.vanish.com.mx/" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/yEpuxdV.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://www.vanish.com.mx/" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/z8HPzP9.png" title="compartir en twitter" width="22" /></a> </span></div>
             </div>
