--- a/Vanish/fade.html
+++ b/Vanish/fade.html
@@ -75,7 +75,7 @@
         }
 
         .corona .bg.cover-3 {
-            background-image: url(https://i.imgur.com/U0QJCrR.jpg)
+            background-image: url(https://i.imgur.com/YiIithA.png)
         }
 
         .corona .bzm_cover.bzm_pos_tl {
