--- a/SICO/fade.html
+++ b/SICO/fade.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Consumer_Fade</title>
+    <title>SICO_Fade</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i" rel=stylesheet>
     <style>
         .corona p {
@@ -267,7 +267,7 @@
 
 <body class="corona" style="margin:0px;">
    <div class="bzm_wrapper carousel-wrapper size_300x250">
-        <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">Máis info</span></div>
+      
         <a href="https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" style="display: block;" target="_blank">
             <div class="carousel-container">
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
@@ -275,8 +275,8 @@
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
             <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:14px;text-align:left;"> Es galeg@ ou descendente e retornaches? Solicita a túa axuda de 5.000 a 7.000€ para emprender!</span></div>
-            <div style="bottom:0px;height:40px;text-align:right ;margin-top:5px; margin-right: 5px;"> <img src="https://i.imgur.com/5qaaAMk.png" style="height:35px;margin-top:-3px;">
-                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-34px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/aWe1A4G.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/ct3Z8bp.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/ecFOGYd.png" title="compartir en twitter" width="22" /></a> </span></div>
+            <div style="bottom:0px;height:40px;text-align:right ;margin-top:5px; margin-right: 5px;"> <img src="https://i.imgur.com/2E5TzB1.jpg" style="height:35px;margin-top:-6px;">
+                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-34px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/dC7ka2p.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/YN2Vf5g.png" title="compartir en twitter" width="22" /></a> </span></div>
             </div>
         </a>
     </div>
