--- a/SICO/fade.html
+++ b/SICO/fade.html
@@ -67,15 +67,15 @@
         }
 
         .corona .bg.cover-1 {
-            background-image: url(https://i.imgur.com/SCSoWVC.jpg)
+            background-image: url(https://i.imgur.com/ADY5ETj.jpg)
         }
 
         .corona .bg.cover-2 {
-            background-image: url(https://i.imgur.com/RgqvbuH.jpg)
+            background-image: url(https://i.imgur.com/1ksxX5o.jpg)
         }
 
         .corona .bg.cover-3 {
-            background-image: url(https://i.imgur.com/p6G8ULj.jpg)
+            background-image: url(https://i.imgur.com/Csxrfne.jpg)
         }
 
         .corona .bzm_cover.bzm_pos_tl {
@@ -108,7 +108,7 @@
             line-height: 1.1;
             color: #000;
             text-align: left;
-            margin-top: 10px;
+            margin-top: 5px;
             width: 99%;
             
         }
@@ -268,15 +268,15 @@
 <body class="corona" style="margin:0px;">
    <div class="bzm_wrapper carousel-wrapper size_300x250">
       
-        <a href="https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" style="display: block;" target="_blank">
+        <a href="https://www.amazon.com.mx/Sico-Lovers-Lata-Piezas-Condones/dp/B01BDPNAE8/ref=sr_1_1/140-2174569-3428535?ie=UTF8&qid=1546806828&sr=8-1&keywords=sico " style="display: block;" target="_blank">
             <div class="carousel-container">
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:14px;text-align:left;"> Es galeg@ ou descendente e retornaches? Solicita a túa axuda de 5.000 a 7.000€ para emprender!</span></div>
-            <div style="bottom:0px;height:40px;text-align:right ;margin-top:5px; margin-right: 5px;"> <img src="https://i.imgur.com/2E5TzB1.jpg" style="height:35px;margin-top:-6px;">
-                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-34px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/dC7ka2p.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/YN2Vf5g.png" title="compartir en twitter" width="22" /></a> </span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:15px;text-align:left;"> Lleva tus Sico contigo y cuida todas tus experiencias. ¡Adquiérelo ya!</span></div>
+            <div style="bottom:0px;height:40px;text-align:right ;margin-top:8px; margin-right: 5px;"> <img src="https://i.imgur.com/2E5TzB1.jpg" style="height:35px;margin-top:-6px;">
+                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-34px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.amazon.com.mx/Sico-Lovers-Lata-Piezas-Condones/dp/B01BDPNAE8/ref=sr_1_1/140-2174569-3428535?ie=UTF8&qid=1546806828&sr=8-1&keywords=sico" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://www.amazon.com.mx/Sico-Lovers-Lata-Piezas-Condones/dp/B01BDPNAE8/ref=sr_1_1/140-2174569-3428535?ie=UTF8&qid=1546806828&sr=8-1&keywords=sico" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/dC7ka2p.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://www.amazon.com.mx/Sico-Lovers-Lata-Piezas-Condones/dp/B01BDPNAE8/ref=sr_1_1/140-2174569-3428535?ie=UTF8&qid=1546806828&sr=8-1&keywords=sico" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/YN2Vf5g.png" title="compartir en twitter" width="22" /></a> </span></div>
             </div>
         </a>
     </div>
