--- a/Nike map/Venetian.html
+++ b/Nike map/Venetian.html
@@ -2131,37 +2131,28 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
-/*#/#*//*#i42.image.css:image/base/css*/
-#i42 { opacity: 1; }
-/*#/#*//*#i42.i43.positioning.css:positioning/base/css.2*/
-#i42 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 295px; height: 55px;
-        -ms-transform: translate(0, 0) translate(13px, 307px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(13px, 307px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(13px, 307px) rotate(0deg);
-        transform: translate(0, 0) translate(13px, 307px) rotate(0deg);
-}
 /*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 26px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 22px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
-#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 277px; height: 56px;
-        -ms-transform: translate(0, 0) translate(26px, 256px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(26px, 256px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(26px, 256px) rotate(0deg);
-        transform: translate(0, 0) translate(26px, 256px) rotate(0deg);
+#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 280px; height: 69px;
+        -ms-transform: translate(0, 0) translate(21px, 253px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(21px, 253px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(21px, 253px) rotate(0deg);
+        transform: translate(0, 0) translate(21px, 253px) rotate(0deg);
 }
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
 #i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 250px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 37px; height: 40px;
-        -ms-transform: translate(0, 0) translate(4px, 435px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(4px, 435px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(4px, 435px) rotate(0deg);
-        transform: translate(0, 0) translate(4px, 435px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 83px; height: 30px;
+        -ms-transform: translate(0, 0) translate(237px, 443px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(237px, 443px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(237px, 443px) rotate(0deg);
+        transform: translate(0, 0) translate(237px, 443px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2232,31 +2223,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background: transparent;
 }
 
-/*#/#*//*#i40.shape.css:shape/base/css*/
-#i40 { background-color: #e62929; opacity: 1;
-}
-/*#/#*//*#i40.i41.positioning.css:positioning/base/css.2*/
-#i40 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 1%;
-        -ms-transform: translate(0, 0) translate(0px, 245px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 245px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 245px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 245px) rotate(0deg);
-}
-/*#/#*//*#i26.button.css:button/base/css*/
-#i26 { position: absolute; cursor: pointer; opacity: 1.00; background-color: rgba(0,0,0,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 0%; letter-spacing: 5px; text-shadow: 0px 0px 0px rgba(0,0,0,0); border-radius: 1px; border-color: rgba(79,76,76,1); border-width: 1px; margin:-1px; border-style: solid; }
-#i26:hover { opacity: 1; background-color: rgba(0,90,140,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,0); border-radius: 1px; border-color: rgba(46,46,46,1); border-width: 1px; margin:-1px; border-style: solid; }
-#i26:active { opacity: 1; background-color: rgba(0,80,130,0); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,0); border-radius: 1px; border-color: rgba(54,54,54,1); border-width: 1px; margin:-1px; border-style: solid; }
-/*#/#*//*#i26.i27.positioning.css:positioning/base/css.2*/
-#i26 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 479px;
-        -ms-transform: translate(0, 0) translate(1px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(1px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(1px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(1px, 0px) rotate(0deg);
-}
 /*#/#*//*#i44.image.css:image/base/css*/
 #i44 { opacity: 1; }
 /*#/#*//*#i44.i45.positioning.css:positioning/base/css.2*/
-#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 317px; height: 119px;
+#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 120px;
         -ms-transform: translate(0, 0) translate(2px, 359px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(2px, 359px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(2px, 359px) rotate(0deg);
@@ -2267,11 +2237,20 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
-#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 194px; height: 55px;
-        -ms-transform: translate(0, 0) translate(63px, 361px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(63px, 361px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(63px, 361px) rotate(0deg);
-        transform: translate(0, 0) translate(63px, 361px) rotate(0deg);
+#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 225px; height: 63px;
+        -ms-transform: translate(0, 0) translate(42px, 366px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(42px, 366px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(42px, 366px) rotate(0deg);
+        transform: translate(0, 0) translate(42px, 366px) rotate(0deg);
+}
+/*#/#*//*#i55.text.css:text/base/css*/
+#i55 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i55.i56.positioning.css:positioning/base/css.2*/
+#i55 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 269px; height: 37px;
+        -ms-transform: translate(0, 0) translate(28px, 319px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(28px, 319px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(28px, 319px) rotate(0deg);
+        transform: translate(0, 0) translate(28px, 319px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2279,38 +2258,32 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <body>
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
-<!--#/#--><!--#i42.image.html:image/html-->
-<img id="i42" src="https://i.imgur.com/NqA81sH.png"/>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">¿Buscando qué regalar en esta Navidad?</div>
+<div id="i7">Estas a unas cuadras de las mejores ofertas de NIKE en Cancún.</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/4lzJ8sh.png"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/2wqj2o6.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/aV7hLMI.png"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/h953QPl.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/bkc5k0S.png"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/hLVBeZt.jpg"></dataimg>
+<!--#/#--><!--#i2.i52.slice-image.html:slice-image/html-->
+<dataimg id="i52" src="https://i.imgur.com/XrGJIpr.jpg"></dataimg>
 <!--#/#-->
 </div>
-<!--#/#--><!--#i40.shape.html:shape/html-->
-<div id="i40"></div>
-<!--#/#--><!--#i26.button.html:button/html-->
-<button id="i26"></button>
 <!--#/#--><!--#i44.image.html:image/html-->
-<img id="i44" src="https://i.imgur.com/M1Zo2bw.png"/>
+<img id="i44" src="https://i.imgur.com/3HRx1aZ.jpg"/>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/Doq2CQA.png"/>
+<img id="i16" src="https://i.imgur.com/1ze4awI.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
-<img id="i46" src="https://i.imgur.com/56lXnnD.png"/>
+<img id="i46" src="https://i.imgur.com/YQ3iHws.png"/>
+<!--#/#--><!--#i55.text.html:text/html-->
+<div id="i55">¡Ven al NIKE FACTORY STORE y descúbrelas hoy mismo!</div>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
 bmShow('i30');
-/*#/#*//*#i42.image.js:image/base/js*/
-
-/*#/#*//*#i42.i43.positioning.js:positioning/base/js.2*/
-bmShow('i42');
 /*#/#*//*#i7.i8.positioning.js:positioning/base/js.2*/
 bmShow('i7');
 /*#/#*//*#i2.slice.js:slice/js*/
@@ -2328,7 +2301,7 @@ document.addEventListener('DOMContentLoaded', function() {
         autoRotationEnabled: 'true',
         autoRotationDelay: '3',
         autoRotationTimeout: '25',
-        shadow: '#006496',
+        shadow: 'rgba(48,48,48,1)',
         perspective: '500',
         useSinglePerspective: 'false',
         useOffsetCompensation: 'true',
@@ -2357,17 +2330,15 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
-/*#/#*//*#i40.i41.positioning.js:positioning/base/js.2*/
-bmShow('i40');
-/*#/#*//*#i26.i27.positioning.js:positioning/base/js.2*/
-bmShow('i26');
-/*#/#*//*#i26.i28.actions.js:actions/base/js.1*/
+/*#/#*//*#i2.i52.slice-image.js:slice-image/base/js*/
+
+/*#/#*//*#i2.i57.actions.js:actions/base/js.1*/
 /* Name: On Click; */
-var el = document.getElementById('i26');
+var el = document.getElementById('i2');
 
 el.addEventListener('click', function(e){
-    /*#i28.i29.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.facebook.com/MinisoColombia/'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i57.i58.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://goo.gl/maps/FZ6iKWbjnhq'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2384,7 +2355,7 @@ var el = document.getElementById('i44');
 
 el.addEventListener('click', function(e){
     /*#i48.i49.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://goo.gl/maps/H16T3b2DJRA2'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://goo.gl/maps/FZ6iKWbjnhq'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2405,13 +2376,15 @@ var el = document.getElementById('i46');
 
 el.addEventListener('click', function(e){
     /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://goo.gl/maps/H16T3b2DJRA2'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://goo.gl/maps/FZ6iKWbjnhq'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i55.i56.positioning.js:positioning/base/js.2*/
+bmShow('i55');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2429,48 +2402,40 @@ function bmHide(id) {
 name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i42.image.meta:image/meta*/
-name: NqA81sH.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i42.i43.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
-name: ¿Buscando qué regalar en esta Navidad?; customName: false;
+name: Estas a unas cuadras de las mejores ofertas de NIKE en Cancún.; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: 4lzJ8sh.png; fileId: ; sourceTypeId: externalUrl;
+name: 2wqj2o6.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: aV7hLMI.png; fileId: ; sourceTypeId: externalUrl;
+name: h953QPl.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: bkc5k0S.png; fileId: ; sourceTypeId: externalUrl;
+name: hLVBeZt.jpg; fileId: ; sourceTypeId: externalUrl;
+/*#/#*//*#i2.i52.slice-image.meta:slice-image/meta*/
+name: XrGJIpr.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i40.shape.meta:shape/meta*/
-name: Shape 2;
-/*#/#*//*#i40.i41.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i26.button.meta:button/meta*/
-name: ;
-customName: false;
-/*#/#*//*#i26.i27.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i44.image.meta:image/meta*/
-name: M1Zo2bw.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: 3HRx1aZ.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i44.i45.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
-name: Doq2CQA.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: 1ze4awI.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i46.image.meta:image/meta*/
-name: 56lXnnD.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: YQ3iHws.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i55.text.meta:text/meta*/
+name: ¡Ven al NIKE FACTORY STORE y descúbrelas hoy mismo!; customName: false;
+/*#/#*//*#i55.i56.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
