--- a/Nike map/Venetian.html
+++ b/Nike map/Venetian.html
@@ -2131,15 +2131,17 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
-/*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 22px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
-#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 280px; height: 69px;
-        -ms-transform: translate(0, 0) translate(21px, 253px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(21px, 253px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(21px, 253px) rotate(0deg);
-        transform: translate(0, 0) translate(21px, 253px) rotate(0deg);
+/*#/#*//*#i2.slice.css:slice/base/css*/
+#i2.adf-SlicedUnit {
+    position: absolute;
+    -webkit-animation-fill-mode:forwards;
+    -moz-animation-fill-mode:forwards;
+    -ms-animation-fill-mode:forwards;
+    animation-fill-mode: forwards;
+    -ms-touch-action: none;
+    background: transparent;
 }
+
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
 #i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 250px;
         -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
@@ -2147,6 +2149,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
+/*#/#*//*#i44.image.css:image/base/css*/
+#i44 { opacity: 1; }
+/*#/#*//*#i16.image.css:image/base/css*/
+#i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
 #i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 83px; height: 30px;
         -ms-transform: translate(0, 0) translate(237px, 443px) rotate(0deg);
@@ -2212,19 +2218,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 .visibility-hidden, .visibility-hidden * {
     visibility: hidden !important;
 }
-/*#/#*//*#i2.slice.css:slice/base/css*/
-#i2.adf-SlicedUnit {
-    position: absolute;
-    -webkit-animation-fill-mode:forwards;
-    -moz-animation-fill-mode:forwards;
-    -ms-animation-fill-mode:forwards;
-    animation-fill-mode: forwards;
-    -ms-touch-action: none;
-    background: transparent;
-}
-
-/*#/#*//*#i44.image.css:image/base/css*/
-#i44 { opacity: 1; }
 /*#/#*//*#i44.i45.positioning.css:positioning/base/css.2*/
 #i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 120px;
         -ms-transform: translate(0, 0) translate(2px, 359px) rotate(0deg);
@@ -2232,8 +2225,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(2px, 359px) rotate(0deg);
         transform: translate(0, 0) translate(2px, 359px) rotate(0deg);
 }
-/*#/#*//*#i16.image.css:image/base/css*/
-#i16 { opacity: 1; }
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
@@ -2243,14 +2234,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(42px, 366px) rotate(0deg);
         transform: translate(0, 0) translate(42px, 366px) rotate(0deg);
 }
-/*#/#*//*#i55.text.css:text/base/css*/
-#i55 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i55.i56.positioning.css:positioning/base/css.2*/
-#i55 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 269px; height: 37px;
-        -ms-transform: translate(0, 0) translate(28px, 319px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(28px, 319px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(28px, 319px) rotate(0deg);
-        transform: translate(0, 0) translate(28px, 319px) rotate(0deg);
+/*#/#*//*#i59.image.css:image/base/css*/
+#i59 { opacity: 1; }
+/*#/#*//*#i59.i60.positioning.css:positioning/base/css.2*/
+#i59 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 307px; height: 108px;
+        -ms-transform: translate(0, 0) translate(7px, 249px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(7px, 249px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(7px, 249px) rotate(0deg);
+        transform: translate(0, 0) translate(7px, 249px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2258,8 +2249,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <body>
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
-<!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">Estas a unas cuadras de las mejores ofertas de NIKE en Cancún.</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2278,14 +2267,12 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i16" src="https://i.imgur.com/1ze4awI.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/YQ3iHws.png"/>
-<!--#/#--><!--#i55.text.html:text/html-->
-<div id="i55">¡Ven al NIKE FACTORY STORE y descúbrelas hoy mismo!</div>
+<!--#/#--><!--#i59.image.html:image/html-->
+<img id="i59" src="https://i.imgur.com/4e7NfT4.jpg"/>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
 bmShow('i30');
-/*#/#*//*#i7.i8.positioning.js:positioning/base/js.2*/
-bmShow('i7');
 /*#/#*//*#i2.slice.js:slice/js*/
 document.addEventListener('DOMContentLoaded', function() {
     var slicedUnit_i2 = new Adf.SlicedUnit({
@@ -2353,7 +2340,11 @@ bmShow('i44');
 /* Name: On Click; */
 var el = document.getElementById('i44');
 
-
+el.addEventListener('click', function(e){
+    /*#i48.i49.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://goo.gl/maps/FZ6iKWbjnhq'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -2379,8 +2370,10 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i55.i56.positioning.js:positioning/base/js.2*/
-bmShow('i55');
+/*#/#*//*#i59.image.js:image/base/js*/
+
+/*#/#*//*#i59.i60.positioning.js:positioning/base/js.2*/
+bmShow('i59');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2397,10 +2390,6 @@ function bmHide(id) {
 <!--#/#--><!--#meta:common/meta--><!--/*#i1.core.meta:core/meta*/version: 2;/*#/#*//*#i30.shape.meta:shape/meta*/
 name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i7.text.meta:text/meta*/
-name: Estas a unas cuadras de las mejores ofertas de NIKE en Cancún.; customName: false;
-/*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
@@ -2430,8 +2419,9 @@ name: YQ3iHws.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i55.text.meta:text/meta*/
-name: ¡Ven al NIKE FACTORY STORE y descúbrelas hoy mismo!; customName: false;
-/*#/#*//*#i55.i56.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
+/*#/#*//*#i59.image.meta:image/meta*/
+name: 4e7NfT4.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i59.i60.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*/--><!--#/#-->
