--- a/Nike map/Venetian.html
+++ b/Nike map/Venetian.html
@@ -2243,6 +2243,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(7px, 249px) rotate(0deg);
         transform: translate(0, 0) translate(7px, 249px) rotate(0deg);
 }
+/*#/#*//*#i61.image.css:image/base/css*/
+#i61 { opacity: 1; }
+/*#/#*//*#i61.i62.positioning.css:positioning/base/css.2*/
+#i61 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 11px; height: 10px;
+        -ms-transform: translate(0, 0) translate(54px, 249px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(54px, 249px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(54px, 249px) rotate(0deg);
+        transform: translate(0, 0) translate(54px, 249px) rotate(0deg);
+}
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2269,6 +2278,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i46" src="https://i.imgur.com/YQ3iHws.png"/>
 <!--#/#--><!--#i59.image.html:image/html-->
 <img id="i59" src="https://i.imgur.com/4e7NfT4.jpg"/>
+<!--#/#--><!--#i61.image.html:image/html-->
+<img id="i61" src="https://i.imgur.com/FOovkjz.jpg"/>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2361,11 +2372,7 @@ bmShow('i46');
 /* Name: On Click; */
 var el = document.getElementById('i46');
 
-el.addEventListener('click', function(e){
-    /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://goo.gl/maps/FZ6iKWbjnhq'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -2374,6 +2381,10 @@ if ('click' === 'click') {
 
 /*#/#*//*#i59.i60.positioning.js:positioning/base/js.2*/
 bmShow('i59');
+/*#/#*//*#i61.image.js:image/base/js*/
+
+/*#/#*//*#i61.i62.positioning.js:positioning/base/js.2*/
+bmShow('i61');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2423,5 +2434,10 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: 4e7NfT4.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i59.i60.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i61.image.meta:image/meta*/
+name: FOovkjz.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i61.i62.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*/--><!--#/#-->
