--- a/Nike map/Venetian.html
+++ b/Nike map/Venetian.html
@@ -2234,23 +2234,23 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(42px, 366px) rotate(0deg);
         transform: translate(0, 0) translate(42px, 366px) rotate(0deg);
 }
-/*#/#*//*#i59.image.css:image/base/css*/
-#i59 { opacity: 1; }
-/*#/#*//*#i59.i60.positioning.css:positioning/base/css.2*/
-#i59 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 307px; height: 108px;
-        -ms-transform: translate(0, 0) translate(7px, 249px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(7px, 249px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(7px, 249px) rotate(0deg);
-        transform: translate(0, 0) translate(7px, 249px) rotate(0deg);
+/*#/#*//*#i63.text.css:text/base/css*/
+#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 22px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
+#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 279px; height: 65px;
+        -ms-transform: translate(0, 0) translate(20px, 252px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(20px, 252px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(20px, 252px) rotate(0deg);
+        transform: translate(0, 0) translate(20px, 252px) rotate(0deg);
 }
-/*#/#*//*#i61.image.css:image/base/css*/
-#i61 { opacity: 1; }
-/*#/#*//*#i61.i62.positioning.css:positioning/base/css.2*/
-#i61 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 11px; height: 10px;
-        -ms-transform: translate(0, 0) translate(54px, 249px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(54px, 249px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(54px, 249px) rotate(0deg);
-        transform: translate(0, 0) translate(54px, 249px) rotate(0deg);
+/*#/#*//*#i65.text.css:text/base/css*/
+#i65 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i65.i66.positioning.css:positioning/base/css.2*/
+#i65 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 268px; height: 38px;
+        -ms-transform: translate(0, 0) translate(30px, 322px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(30px, 322px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(30px, 322px) rotate(0deg);
+        transform: translate(0, 0) translate(30px, 322px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2276,10 +2276,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i16" src="https://i.imgur.com/1ze4awI.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/YQ3iHws.png"/>
-<!--#/#--><!--#i59.image.html:image/html-->
-<img id="i59" src="https://i.imgur.com/4e7NfT4.jpg"/>
-<!--#/#--><!--#i61.image.html:image/html-->
-<img id="i61" src="https://i.imgur.com/FOovkjz.jpg"/>
+<!--#/#--><!--#i63.text.html:text/html-->
+<div id="i63">Estás a unas cuadras de las mejores ofertas de NIKE en Aeropuerto</div>
+<!--#/#--><!--#i65.text.html:text/html-->
+<div id="i65">¡Ven al NIKE FACTORY STORE y descúbrelas hoy mismo!</div>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2377,14 +2377,10 @@ var el = document.getElementById('i46');
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i59.image.js:image/base/js*/
-
-/*#/#*//*#i59.i60.positioning.js:positioning/base/js.2*/
-bmShow('i59');
-/*#/#*//*#i61.image.js:image/base/js*/
-
-/*#/#*//*#i61.i62.positioning.js:positioning/base/js.2*/
-bmShow('i61');
+/*#/#*//*#i63.i64.positioning.js:positioning/base/js.2*/
+bmShow('i63');
+/*#/#*//*#i65.i66.positioning.js:positioning/base/js.2*/
+bmShow('i65');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2430,14 +2426,12 @@ name: YQ3iHws.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i59.image.meta:image/meta*/
-name: 4e7NfT4.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i59.i60.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i61.image.meta:image/meta*/
-name: FOovkjz.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i61.i62.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i63.text.meta:text/meta*/
+name: Estás a unas cuadras de las mejores ofertas de NIKE en Aeropuerto; customName: false;
+/*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i65.text.meta:text/meta*/
+name: ¡Ven al NIKE FACTORY STORE y descúbrelas hoy mismo!; customName: false;
+/*#/#*//*#i65.i66.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
