--- a/Formatos ADS/Zoom/320x480/Zoom320x480.html
+++ b/Formatos ADS/Zoom/320x480/Zoom320x480.html
@@ -158,7 +158,7 @@ a {text-decoration: none;}
 
   
    <div class="wrapper size_300x250">
-    <div class="cta"><span class="ism_text_title ism_text_bold" style="font-size:80%; font-family:Arial; border: 1px; color: white;">¡llevame!</span></div>
+    <div class="cta"><span class="ism_text_title ism_text_bold" style="font-size:80%; font-family:Arial; border: 1px; color: white;">¡llévame!</span></div>
 
 <div class="ism-slider" data-play_type="loop" data-image_fx="zoomrotate" data-radios="false" id="my-slider" style="width: 320px; height: 250px; border-radius: none;">
   <ol>
