--- a/Formatos ADS/ZoomExplosivo/300x600/ZoomExp300x600.html
+++ b/Formatos ADS/ZoomExplosivo/300x600/ZoomExp300x600.html
@@ -72,10 +72,10 @@ a {text-decoration: none;}
         .zoom .ism_text {
             margin-top: 8px;
             margin-left: 0px;
-            text-align: justify;
+            
             padding-left: 4px;
             text-decoration: none;
-            width: 93%;
+            width: 95%;
         }
 
         .zoom .ism_text_title {
@@ -173,9 +173,10 @@ a {text-decoration: none;}
   </ol>
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:22px; text-align:center; text-decoration: none;">¿Sabes cómo enamorar a tu pareja cada día?</span></br>
+ <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:18px; text-align:center; text-decoration: none;">Disfruta de un gran viaje alrededor de los sabores del mundo.</span></br>
 
-    <span class=" ism_text_medium" style="font-family:Arial; color:#000000; font-size:17px; text-align:justify; text-decoration: none; margin-top: 5px;">Entonces mira estos tips que tenemos para que mantengas vivo el amor...</span>                     
+    <span class=" ism_text_medium" style="font-family:Arial; color:#000000; font-size:17px; text-align:justify; text-decoration: none; margin-top: 5px;">La gastronomía mexicana, declarada por la UNESCO Patrimonio Intangible de la Humanidad, 
+es la protagonista.</span>                     
                    </div>
 
                 <div style="bottom:0px;height:40px;text-align:right ;margin-top:-2px; margin-right: 4px;"> <img src="https://i.imgur.com/IdA4DdX.png" style="height:40px; text-decoration: none;">
