--- a/xcaret 2/300x600/ZoomExp300x600.html
+++ b/xcaret 2/300x600/ZoomExp300x600.html
@@ -173,7 +173,7 @@ a {text-decoration: none;}
   </ol>
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:19px; text-align:center; text-decoration: none;">Ideas increíbles para sorprender a tu pareja con un viaje inolvidable a México.</span></br>
+ <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:19px; text-align:center; text-decoration: none;">Disfruta de un gran viaje alrededor de los sabores del mundo</span></br>
 
                     
                    </div>
