--- a/xcaret 2/Inglés/Cube.html
+++ b/xcaret 2/Inglés/Cube.html
@@ -561,7 +561,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i24.text.css:text/base/css*/
 #i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
-#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 287px; height: 33px;
+#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 287px; height: 38px;
         -ms-transform: translate(-50%, -50%) translate(0px, 66px) rotate(0deg);
         -webkit-transform: translate(-50%, -50%) translate(0px, 66px) rotate(0deg);
         -moz-transform: translate(-50%, -50%) translate(0px, 66px) rotate(0deg);
@@ -799,7 +799,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">Disfruta de la aventura en familia en un hotel de ensueño.</div>
+<div id="i14"> If you like Mexico and adventure you can´t miss this.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/XP1pM9g.png"/>
 <!--#/#--><!--#i4.i186.image.html:image/html-->
@@ -813,7 +813,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Si te gusta México y la aventura, no te puedes perder esto....</div>
+<div id="i24">Incredible idea to surprise your family with a vacation in Mexico!</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/x6F8Sxl.png"/>
 <!--#/#--><!--#i5.i184.image.html:image/html-->
@@ -829,7 +829,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/lKx4eDq.png"/>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">¿Quieres sorprender a tu pareja con un viaje de aventura inolvidable?</div>
+<div id="i34">Planning a Romantic Surprise Trip?. Think on Mexico as the best option!</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/E4VSZ2W.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
@@ -883,7 +883,7 @@ bmShow('i186');
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
     /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.hotelxcaret.com/es/all-fun-inclusive/?langRedirect=1'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.hotelxcaret.com/en/all-fun-inclusive/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
@@ -899,7 +899,7 @@ bmShow('i184');
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
     /*#i175.i176.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.hotelxcaret.com/es/all-fun-inclusive/?langRedirect=1'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.hotelxcaret.com/en/all-fun-inclusive/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
@@ -915,7 +915,7 @@ bmShow('i181');
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
     /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.hotelxcaret.com/es/all-fun-inclusive/?langRedirect=1'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.hotelxcaret.com/en/all-fun-inclusive/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
