--- a/xcaret 2/Inglés/300x250/ZoomExp300x250.html
+++ b/xcaret 2/Inglés/300x250/ZoomExp300x250.html
@@ -148,7 +148,7 @@ a {text-decoration: none;}
 
 </head>
 <body class="zoom" style="margin:0px;">
-  <a href="https://www.hotelxcaret.com/es/all-fun-inclusive/?langRedirect=1" target="_blank">
+  <a href="https://www.hotelxcaret.com/en/all-fun-inclusive/" target="_blank">
  	 <div class="wrapper size_300x250">
     
 
@@ -167,7 +167,7 @@ a {text-decoration: none;}
   </ol>
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:17px; text-align:left; text-decoration: none;">Ideas increíbles para sorprender a tu pareja con un viaje inolvidable a México.</span> 
+ <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:16px; text-align:left; text-decoration: none;">Planning a Romantic Surprise Trip?.Think on Mexico as the best option...</span> 
                     
                    </div>
 
