--- a/xcaret 2/Inglés/fade-small.html
+++ b/xcaret 2/Inglés/fade-small.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
     <!-- Adform API Script -->
@@ -112,7 +111,7 @@
             text-align: justify;
             margin-top: 2px;
             width: 94%;
-           font-size:18px;
+           font-size:16px;
             
         }
 
@@ -271,14 +270,14 @@
     <!-- Para quitar CTA se quita esta etiqueta y recordar quitar la propiedad CTA en el CSS -->
         
 
-        <a href="https://www.hotelxcaret.com/es/all-fun-inclusive/?langRedirect=1" target="_blank">
+        <a href="https://www.hotelxcaret.com/en/all-fun-inclusive/" target="_blank">
             <div class="carousel-container">
                 <!-- ESTAS SE COLOCAN EN EL CSS -->
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold"> Haz de tu próximo viaje una experiencia única e inolvidable en Cancún.</span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold"> Want to disconnect from routine?. Check out these family trips to Mexico combining relax an adventure. </span></div>
 
             <!-- LOGO -->
             <div class="logo"> <img id="logo" src="https://i.imgur.com/lKx4eDq.png"></div>
