--- a/xcaret 2/Inglés/300x600/ZoomExp300x600.html
+++ b/xcaret 2/Inglés/300x600/ZoomExp300x600.html
@@ -150,7 +150,7 @@ a {text-decoration: none;}
 
 </head>
 <body class="zoom" style="margin:0px;">
-  <a href="https://www.hotelxcaret.com/es/all-fun-inclusive/?langRedirect=1" target="_blank">
+  <a href="https://www.hotelxcaret.com/en/all-fun-inclusive/" target="_blank">
  	 <div class="wrapper size_300x250">
     
 
