--- a/xcaret 2/Inglés/FadeBig.html
+++ b/xcaret 2/Inglés/FadeBig.html
@@ -325,7 +325,7 @@
     </style>
     <script>
         function openUrl() {
-            window.open("https://www.hotelxcaret.com/es/all-fun-inclusive/?langRedirect=1");
+            window.open("https://www.hotelxcaret.com/en/all-fun-inclusive/");
         }
     </script>
 </head>
