--- a/AXA/AXA/ZoomExp300x600/ZoomExp300x600.html
+++ b/AXA/AXA/ZoomExp300x600/ZoomExp300x600.html
@@ -79,9 +79,9 @@ a {text-decoration: none;}
         }
 
         .zoom .ism_text_title {
-            font-size: 20px;
+            font-size: 14px;
             color: #000;
-            width:92%;
+            width:95%;
             margin-top: 10px;
             text-align: center;
 
@@ -171,14 +171,14 @@ a {text-decoration: none;}
 
  <div class="ism_text_title" style="font-weight: 720;"> 
 
-    <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000;">Ten restaurants and eight bars at Hotel Xcaret Mexico</span></br>
+    <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000;">Cada 2 minutos y 7 segundos se produce un robo con violencia en el país.</span>
 
                     
                    </div>
 
-                   <div class="ism_text_medium" style="width: 92%; padding-left: 7px; text-align: justify; font-size: 14PX; margin-top: 10px;"> 
+                   <div class="ism_text_medium" style="width: 92%; padding-left: 7px; text-align: justify; font-size: 12PX; margin-top: 10px;"> 
 
-    <span class=" ism_text_medium" style="font-family:Arial; color:#000000;"><p> Where the Mexican gastronomy, declared by <B>UNESCO as Intangible Cultural Heritage,</B> is the protagonist.</p>
+    <span class=" ism_text_medium" style="font-family:Arial; color:#000000;"><p>"Al regresar del trabajo, encontré mi casa abierta, se llevaron mi pantalla, laptop, tablet y unas bocinas. Lo reporté, entregué mis documentos y recibí mi pago en una semana." <b>Sara, 38 años, </b><i>asegurada con Hogar Integral.</i></p>
     
     </span></br>
 
